Fix spacing and proportions on the work page.

--- a/src/app/crai-people/crai-people.component.scss
+++ b/src/app/crai-people/crai-people.component.scss
@@ -1,7 +1,1 @@
-.employee-card{
-  border-radius: 0;
-}
 
-.employee-header-image {
-  background-size: cover;
-}
