--- a/src/app/crai-work/crai-work.component.scss
+++ b/src/app/crai-work/crai-work.component.scss
@@ -5,3 +5,12 @@
 .portfolio-button-row .mat-button-base {
   margin: 0 15px 15px 0;
 }
+
+.portfolio-image {
+  height: 300px;
+  object-fit: cover;
+}
+
+.extra-height {
+  height: 120px;
+}
